[project]
name = "linjapona-normalize"
version = "1.0.0"
description = "a short script to normalize all the basic linja pona glyphs to 128x128"
authors = [
    {name = "Gregory Danielson", email = "gregory.danielson3@gmail.com"},
]
dependencies = [
    "Pillow~=8.3",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "GPL-3.0-or-later"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
